[gd_scene load_steps=18 format=3 uid="uid://dbi1f2uc836vy"]

[ext_resource type="PackedScene" uid="uid://dq64vp5tos7cw" path="res://models/dininghall/RiscuitsDiningHall.gltf" id="1_8w4oh"]
[ext_resource type="Script" uid="uid://caxamwvyek2n" path="res://scenes/dining_hall.gd" id="1_hvw7s"]
[ext_resource type="PackedScene" uid="uid://eh7te1cp07q5" path="res://prefabs/pause_menu.tscn" id="3_t7842"]
[ext_resource type="Script" uid="uid://du6mtnue0r5dw" path="res://scripts/rail_cam.gd" id="4_k7dkh"]
[ext_resource type="PackedScene" uid="uid://uww0dw0d6m7f" path="res://prefabs/player.tscn" id="5_pimhm"]
[ext_resource type="Environment" uid="uid://cuxra7uc8caxi" path="res://world_environment_stuff/inclass_environment.tres" id="6_k7dkh"]
[ext_resource type="Texture2D" uid="uid://dxsdflr04tkt7" path="res://assets from harrish/Art/Biscuit_Pixel_Sprites/Riskuits_Lotus_Pixel.png" id="7_pimhm"]
[ext_resource type="Texture2D" uid="uid://7t8m8m80ud5b" path="res://assets from harrish/Art/LotusTea.png" id="8_ry1bp"]
[ext_resource type="Texture2D" uid="uid://blc8vawulmiqd" path="res://assets from harrish/Art/UI_Sprite/SpaceBarPress-export.png" id="8_u2u04"]
[ext_resource type="Texture2D" uid="uid://u3w4f6od0wpj" path="res://assets from harrish/Art/WafuneBooks.png" id="9_qkvnl"]
[ext_resource type="PackedScene" uid="uid://b0gosuak2c46q" path="res://models/dininghall/RiscuitsChair.gltf" id="11_yqfbd"]

[sub_resource type="Animation" id="Animation_hwv8p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_drbwl"]
resource_name = "SpaceBar_UI"
length = 1.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.23333333, 0.46666667, 0.7, 0.93333334, 1.1666666, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_52g5x"]
_data = {
&"RESET": SubResource("Animation_hwv8p"),
&"SpaceBar_UI": SubResource("Animation_drbwl")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_u2u04"]
size = Vector3(12.943359, 1, 3.9902954)

[sub_resource type="BoxShape3D" id="BoxShape3D_4wg2u"]
size = Vector3(2.580307, 1, 0.09399414)

[sub_resource type="BoxShape3D" id="BoxShape3D_yqfbd"]
size = Vector3(1, 1, 8.233154)

[node name="DiningHall" type="Node3D" node_paths=PackedStringArray("pause_menu", "win_control", "lose_control", "interactions_icon", "interactions_icon_animator")]
script = ExtResource("1_hvw7s")
pause_menu = NodePath("PauseMenu")
win_control = NodePath("Win")
lose_control = NodePath("Lose")
interactions_icon = NodePath("InteractionIcon")
interactions_icon_animator = NodePath("InteractionIcon/AnimationPlayer")

[node name="blockbench_export" parent="." instance=ExtResource("1_8w4oh")]
transform = Transform3D(-1.5867235e-07, 0, 3.6300004, 0, 3.63, 0, -3.6300004, 0, -1.5867235e-07, 0, 0, 0)

[node name="PauseMenu" parent="." instance=ExtResource("3_t7842")]
visible = false

[node name="Win" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Win"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Win"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -62.5
offset_right = 62.5
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 120
text = "You got a date!"

[node name="MainMenu" type="Button" parent="Win"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -15.5
offset_right = 48.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Main Menu"

[node name="Lose" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Lose"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Lose"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -33.5
offset_right = 33.5
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 120
text = "You fumbled!"

[node name="MainMenu2" type="Button" parent="Lose"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -15.5
offset_right = 48.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Main Menu"

[node name="RailCamera3D" type="Camera3D" parent="." node_paths=PackedStringArray("main_subject_", "rail_limit_1_", "rail_limit_2_")]
transform = Transform3D(1, 0, 0, 0, 0.9733112, 0.22948919, 0, -0.22948919, 0.9733112, 42.05272, 5.830878, 28.827763)
script = ExtResource("4_k7dkh")
look_at_main_subject_ = false
main_subject_ = NodePath("../Player")
rail_limit_1_ = NodePath("Limit1")
rail_limit_2_ = NodePath("Limit2")
metadata/_custom_type_script = "uid://du6mtnue0r5dw"

[node name="Limit2" type="Camera3D" parent="RailCamera3D"]
transform = Transform3D(1, 0, 0, 0, 0.99999994, 0, 0, 0, 0.99999994, -29.919212, 3.0157099, -6.79945)

[node name="Limit1" type="Camera3D" parent="RailCamera3D"]
transform = Transform3D(0.99636614, -0.0100848805, 0.08457431, 0.019546393, 0.99353814, -0.11180283, -0.08290029, 0.1130497, 0.9901249, 0, -1.1981649, -0.28250504)

[node name="Player" parent="." instance=ExtResource("5_pimhm")]
transform = Transform3D(1.8, 0, 0, 0, 1.8, 0, 0, 0, 1.8, 7.941087, 1.000001, 6.1129055)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.97031915, -0.12488165, 0.20708758, -0.077973805, 0.97217286, 0.22090691, -0.22891217, 0.19820276, -0.95305556, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("6_k7dkh")

[node name="InteractionIcon" type="Sprite3D" parent="."]
transform = Transform3D(0.45204127, 0, -0.21367894, 0, 0.5, 0, 0.21367894, 0, 0.45204127, 43.22821, 5.3860965, 22.014496)
billboard = 1
texture = ExtResource("8_u2u04")
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="InteractionIcon"]
libraries = {
&"": SubResource("AnimationLibrary_52g5x")
}

[node name="LotusArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 42.804966, 1.546274, 22.298159)

[node name="CollisionShape3D" type="CollisionShape3D" parent="LotusArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.430664, 0, -0.06436157)
shape = SubResource("BoxShape3D_u2u04")
debug_color = Color(0, 0.6, 0.69803923, 1)

[node name="StaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 42.305077, 2.712984, 22.622452)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.11986542, 0, -0.015991211)
shape = SubResource("BoxShape3D_4wg2u")

[node name="Lotus" type="Sprite3D" parent="."]
transform = Transform3D(0.67244524, 0, 0, 0, 0.67244524, 0, 0, 0, 1, 42.305077, 2.712984, 22.622452)
shaded = true
texture = ExtResource("7_pimhm")

[node name="LotusTea" type="Sprite3D" parent="."]
transform = Transform3D(0.38, 0, 0, 0, 0.38, 0, 0, 0, 0.38, 39.576168, 3.042973, 21.307158)
texture = ExtResource("8_ry1bp")

[node name="LotusBook" type="Sprite3D" parent="."]
transform = Transform3D(0.56, 0, 0, 0, 0.0097733345, 0.5599147, 0, -0.5599147, 0.0097733345, 39.098007, 2.8049715, 22.51873)
texture = ExtResource("9_qkvnl")

[node name="ExitHallway" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.4226813, 1.4878285, 5.6216063)

[node name="CollisionShape3D" type="CollisionShape3D" parent="ExitHallway"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.24719238)
shape = SubResource("BoxShape3D_yqfbd")
debug_color = Color(0, 0.6, 0.69803923, 1)

[node name="DiningChairs" type="Node3D" parent="."]

[node name="blockbench_export2" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, 5, 0, 5, 0, -5, 0, -2.1855695e-07, -3.7787666, -0.25156927, -49.461323)

[node name="blockbench_export56" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(2.7078073, 0, 4.2033057, 0, 5, 0, -4.2033057, 0, 2.7078073, 62.18184, -0.25156927, -46.812313)

[node name="blockbench_export57" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(4.2658896, 0, -2.6081002, 0, 5.0000005, 0, 2.6081002, 0, 4.2658896, 109.52421, -0.25156927, 69.10473)

[node name="blockbench_export58" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(2.185264, 0, 4.49718, 0, 5.000001, 0, -4.49718, 0, 2.185264, 52.432526, -0.25156927, -21.526396)

[node name="blockbench_export59" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(2.185264, 0, 4.49718, 0, 5.000001, 0, -4.49718, 0, 2.185264, 52.432526, -0.25156927, -29.58522)

[node name="blockbench_export3" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, 5, 0, 5, 0, -5, 0, -2.1855695e-07, -3.7787666, -0.25156927, -46.706024)

[node name="blockbench_export4" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, 5, 0, 5, 0, -5, 0, -2.1855695e-07, -3.7787666, -0.25156927, -43.960613)

[node name="blockbench_export5" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, 5, 0, 5, 0, -5, 0, -2.1855695e-07, -3.7787666, -0.25156927, -36.65307)

[node name="blockbench_export6" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, 5, 0, 5, 0, -5, 0, -2.1855695e-07, -3.7787666, -0.25156927, -33.89777)

[node name="blockbench_export7" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, 5, 0, 5, 0, -5, 0, -2.1855695e-07, -3.7787666, -0.25156927, -31.152359)

[node name="blockbench_export8" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, 5, 0, 5, 0, -5, 0, -2.1855695e-07, -3.7787666, -0.25156927, -23.913654)

[node name="blockbench_export9" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, 5, 0, 5, 0, -5, 0, -2.1855695e-07, -3.7787666, -0.25156927, -21.158356)

[node name="blockbench_export10" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, 5, 0, 5, 0, -5, 0, -2.1855695e-07, -3.7787666, -0.25156927, -18.412945)

[node name="blockbench_export11" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, 5, 0, 5, 0, -5, 0, -2.1855695e-07, 4.145342, -0.25156927, -49.461323)

[node name="blockbench_export12" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, 5, 0, 5, 0, -5, 0, -2.1855695e-07, 4.145342, -0.25156927, -46.706024)

[node name="blockbench_export13" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, 5, 0, 5, 0, -5, 0, -2.1855695e-07, 4.145342, -0.25156927, -43.960613)

[node name="blockbench_export14" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, 5, 0, 5, 0, -5, 0, -2.1855695e-07, 4.145342, -0.25156927, -36.65307)

[node name="blockbench_export15" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, 5, 0, 5, 0, -5, 0, -2.1855695e-07, 4.145342, -0.25156927, -33.89777)

[node name="blockbench_export16" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, 5, 0, 5, 0, -5, 0, -2.1855695e-07, 4.145342, -0.25156927, -31.152359)

[node name="blockbench_export17" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, 5, 0, 5, 0, -5, 0, -2.1855695e-07, 4.145342, -0.25156927, -23.913654)

[node name="blockbench_export18" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, 5, 0, 5, 0, -5, 0, -2.1855695e-07, 4.145342, -0.25156927, -21.158356)

[node name="blockbench_export19" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, 5, 0, 5, 0, -5, 0, -2.1855695e-07, 4.145342, -0.25156927, -18.412945)

[node name="blockbench_export20" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, 5, 0, 5, 0, -5, 0, -2.1855695e-07, 11.567394, -0.25156927, -49.461323)

[node name="blockbench_export21" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, 5, 0, 5, 0, -5, 0, -2.1855695e-07, 11.567394, -0.25156927, -46.706024)

[node name="blockbench_export22" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, 5, 0, 5, 0, -5, 0, -2.1855695e-07, 11.567394, -0.25156927, -43.960613)

[node name="blockbench_export23" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, 5, 0, 5, 0, -5, 0, -2.1855695e-07, 11.567394, -0.25156927, -36.65307)

[node name="blockbench_export24" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, 5, 0, 5, 0, -5, 0, -2.1855695e-07, 11.567394, -0.25156927, -33.89777)

[node name="blockbench_export25" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, 5, 0, 5, 0, -5, 0, -2.1855695e-07, 11.567394, -0.25156927, -31.152359)

[node name="blockbench_export26" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, 5, 0, 5, 0, -5, 0, -2.1855695e-07, 11.567394, -0.25156927, -23.913654)

[node name="blockbench_export27" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, 5, 0, 5, 0, -5, 0, -2.1855695e-07, 11.567394, -0.25156927, -21.158356)

[node name="blockbench_export28" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, 5, 0, 5, 0, -5, 0, -2.1855695e-07, 11.567394, -0.25156927, -18.412945)

[node name="blockbench_export29" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, -5, 0, 5, 0, 5, 0, -2.1855695e-07, 45.028122, -0.39160347, 87.65814)

[node name="blockbench_export30" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, -5, 0, 5, 0, 5, 0, -2.1855695e-07, 45.028122, -0.39160347, 90.41344)

[node name="blockbench_export31" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, -5, 0, 5, 0, 5, 0, -2.1855695e-07, 45.028122, -0.39160347, 93.15885)

[node name="blockbench_export32" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, -5, 0, 5, 0, 5, 0, -2.1855695e-07, 45.028122, -0.39160347, 100.4664)

[node name="blockbench_export33" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, -5, 0, 5, 0, 5, 0, -2.1855695e-07, 45.028122, -0.39160347, 103.221695)

[node name="blockbench_export34" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, -5, 0, 5, 0, 5, 0, -2.1855695e-07, 45.028122, -0.39160347, 105.9671)

[node name="blockbench_export35" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, -5, 0, 5, 0, 5, 0, -2.1855695e-07, 45.028122, -0.39160347, 113.20581)

[node name="blockbench_export36" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, -5, 0, 5, 0, 5, 0, -2.1855695e-07, 45.028122, -0.39160347, 115.961105)

[node name="blockbench_export37" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, -5, 0, 5, 0, 5, 0, -2.1855695e-07, 45.028122, -0.39160347, 118.70652)

[node name="blockbench_export38" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, -5, 0, 5, 0, 5, 0, -2.1855695e-07, 36.593884, -0.39160347, 87.65814)

[node name="blockbench_export39" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, -5, 0, 5, 0, 5, 0, -2.1855695e-07, 36.593884, -0.39160347, 90.41344)

[node name="blockbench_export40" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, -5, 0, 5, 0, 5, 0, -2.1855695e-07, 36.593884, -0.39160347, 93.15885)

[node name="blockbench_export41" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, -5, 0, 5, 0, 5, 0, -2.1855695e-07, 36.593884, -0.39160347, 100.4664)

[node name="blockbench_export42" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, -5, 0, 5, 0, 5, 0, -2.1855695e-07, 36.593884, -0.39160347, 103.221695)

[node name="blockbench_export43" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, -5, 0, 5, 0, 5, 0, -2.1855695e-07, 36.593884, -0.39160347, 105.9671)

[node name="blockbench_export44" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, -5, 0, 5, 0, 5, 0, -2.1855695e-07, 36.593884, -0.39160347, 113.20581)

[node name="blockbench_export45" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, -5, 0, 5, 0, 5, 0, -2.1855695e-07, 36.593884, -0.39160347, 115.961105)

[node name="blockbench_export46" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, -5, 0, 5, 0, 5, 0, -2.1855695e-07, 36.593884, -0.39160347, 118.70652)

[node name="blockbench_export47" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, -5, 0, 5, 0, 5, 0, -2.1855695e-07, 29.012207, -0.39160347, 87.65814)

[node name="blockbench_export48" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, -5, 0, 5, 0, 5, 0, -2.1855695e-07, 29.012207, -0.39160347, 90.41344)

[node name="blockbench_export49" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, -5, 0, 5, 0, 5, 0, -2.1855695e-07, 29.012207, -0.39160347, 93.15885)

[node name="blockbench_export50" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, -5, 0, 5, 0, 5, 0, -2.1855695e-07, 29.012207, -0.39160347, 100.4664)

[node name="blockbench_export51" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, -5, 0, 5, 0, 5, 0, -2.1855695e-07, 29.012207, -0.39160347, 103.221695)

[node name="blockbench_export52" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, -5, 0, 5, 0, 5, 0, -2.1855695e-07, 29.012207, -0.39160347, 105.9671)

[node name="blockbench_export53" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, -5, 0, 5, 0, 5, 0, -2.1855695e-07, 29.012207, -0.39160347, 113.20581)

[node name="blockbench_export54" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, -5, 0, 5, 0, 5, 0, -2.1855695e-07, 29.012207, -0.39160347, 115.961105)

[node name="blockbench_export55" parent="DiningChairs" instance=ExtResource("11_yqfbd")]
transform = Transform3D(-2.1855695e-07, 0, -5, 0, 5, 0, 5, 0, -2.1855695e-07, 29.012207, -0.39160347, 118.70652)

[connection signal="button_down" from="Win/MainMenu" to="." method="_on_main_menu_button_down"]
[connection signal="button_down" from="Lose/MainMenu2" to="." method="_on_main_menu_2_button_down"]
[connection signal="body_entered" from="LotusArea" to="." method="_on_lotus_area_body_entered"]
[connection signal="body_exited" from="LotusArea" to="." method="_on_lotus_area_body_exited"]
[connection signal="body_entered" from="ExitHallway" to="." method="_on_exit_hallway_body_entered"]
